# fastapi-aws-lambda-template

./: .env.sample  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.aws.lambda  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  constants.py  db.py
backend/app/models/: base.py  users.py
backend/app/views/: users.py  utils.py
backend/scripts/: aws_lambda_prep.sh
