[project]
name = "fastapi-aws-lambda"
version = "0.1.0"
description = "A FastAPI AWS Lambda Template for quickly deploying an app to AWS Lambda using AWS ECR."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "fastapi-cli>=0.0.7",
    "mangum>=0.19.0",
    "pg8000>=1.31.2",
    "pydantic-extra-types>=2.10.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.0",
]
